--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./types/index.d.ts",
-
-
-
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -36,7 +33,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "sass-embedded": "^1.93.2",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
