--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "license": "MIT",
   "packageManager": "yarn@3.6.0",
+  "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "types/index.d.ts",
   "exports": {
     ".": {
       "types": "./types/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
@@ -19,17 +23,11 @@
     "types",
     "package.json"
   ],
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./types/index.d.ts",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview",
-    "build:esm": "tsc --project tsconfig.build.json",
-    "build:cjs": "tsc --project tsconfig.build.cjs.json",
-    "build": "rm -rf dist && rm -rf types && yarn build:cjs && yarn build:esm"
+    "build": "rm -rf dist && rm -rf types && vite build && tsc -p tsconfig.build.json"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -53,5 +51,6 @@
   },
   "resolutions": {
     "vite": "npm:rolldown-vite@7.1.12"
-  }
+  },
+  "sideEffects": ["**/*.css", "**/*.scss"]
 }
