--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.6",
   "name": "navigatio",
   "repository": {
     "type": "git",
@@ -8,15 +8,16 @@
   "license": "MIT",
   "packageManager": "yarn@3.6.0",
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "types/index.d.ts",
   "exports": {
     ".": {
       "types": "./types/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
+      "default": "./dist/index.js"
+    },
+    "./navigatio.css": "./dist/navigatio.css"
   },
   "files": [
     "dist",
@@ -29,13 +30,13 @@
     "preview": "vite preview",
     "build": "rm -rf dist && rm -rf types && vite build && tsc -p tsconfig.build.json"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "sass-embedded": "^1.93.2",
-    "scss": "^0.2.4"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "sass-embedded": "^1.93.2",
+    "scss": "^0.2.4",
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
